Pull song database model into a separate assemble

--- a/DanceCalc/music4dance/Views/Account/Manage.cshtml
+++ b/DanceCalc/music4dance/Views/Account/Manage.cshtml
@@ -1,4 +1,4 @@
-﻿@model music4dance.Models.LocalPasswordModel
+﻿@model SongDatabase.Models.LocalPasswordModel
 @{
     ViewBag.Title = "Manage Account";
 }
