--- a/DanceCalc/music4dance/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/DanceCalc/music4dance/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model music4dance.Models.RegisterExternalLoginModel
+﻿@model SongDatabase.Models.RegisterExternalLoginModel
 @{
     ViewBag.Title = "Register";
 }
