--- a/DanceCalc/music4dance/Views/Account/_RemoveExternalLoginsPartial.cshtml
+++ b/DanceCalc/music4dance/Views/Account/_RemoveExternalLoginsPartial.cshtml
@@ -1,11 +1,11 @@
-﻿@model ICollection<music4dance.Models.ExternalLogin>
+﻿@model ICollection<SongDatabase.Models.ExternalLogin>
 
 @if (Model.Count > 0)
 {
     <h3>Registered external logins</h3>
     <table>
         <tbody>
-        @foreach (music4dance.Models.ExternalLogin externalLogin in Model)
+        @foreach (SongDatabase.Models.ExternalLogin externalLogin in Model)
         {
             <tr>
                 <td>@externalLogin.ProviderDisplayName</td>
