--- a/DanceCalc/music4dance/Content/Site.css
+++ b/DanceCalc/music4dance/Content/Site.css
@@ -328,12 +328,23 @@ aside {
     font-weight: 700;
 }
 
-/* login page */
-#loginForm {
-    border-right: solid 2px #c8c8c8;
-    float: left;
-    width: 55%;
+.display-label {
+    display: inline;
+    font-size: 1.2em;
+    font-weight: 600;
 }
+
+.display-field {
+    display: inline;
+    font-size: 1.2em;
+}
+
+/* login page */
+    #loginForm {
+        border-right: solid 2px #c8c8c8;
+        float: left;
+        width: 55%;
+    }
 
     #loginForm .validation-error {
         display: block;
