--- a/DanceCalc/music4dance/Views/Home/Index.cshtml
+++ b/DanceCalc/music4dance/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Music4Dance Home";
 }
 @section featured {
     <section class="featured">
@@ -8,38 +8,37 @@
                 <h1>@ViewBag.Title.</h1>
                 <h2>@ViewBag.Message</h2>
             </hgroup>
-            <p>
-                To learn more about ASP.NET MVC visit
-                <a href="http://asp.net/mvc" title="ASP.NET MVC Website">http://asp.net/mvc</a>.
-                The page features <mark>videos, tutorials, and samples</mark> to help you get the most from ASP.NET MVC.
-                If you have any questions about ASP.NET MVC visit
-                <a href="http://forums.asp.net/1146.aspx/1?MVC" title="ASP.NET MVC Forum">our forums</a>.
-            </p>
         </div>
     </section>
 }
-<h3>We suggest the following:</h3>
+<h3>What is Music4Dance.Net?</h3>
 <ol class="round">
     <li class="one">
-        <h5>Getting Started</h5>
-        ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-        enables a clean separation of concerns and that gives you full control over markup
-        for enjoyable, agile development. ASP.NET MVC includes many features that enable
-        fast, TDD-friendly development for creating sophisticated applications that use
-        the latest web standards.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245151">Learn more…</a>
+        <h5>It is an idea</h5>
+        This is an early concrete representation of an idea that has been floating around in my head since I first started learning to ballroom dance in the early 1990s (man that was a long time ago).
+        As someone with a fairly robust music background and a very robust foundation in computer science, it's always annoyed me that there isn't a good way to find music to dance to.
     </li>
 
     <li class="two">
-        <h5>Add NuGet packages and jump-start your coding</h5>
-        NuGet makes it easy to install and update free libraries and tools.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245153">Learn more…</a>
+        <h5>My first very small step</h5>
+        The problem is, my grand vision of how to solve this problem requires <i>a lot</i> of moving parts.  But after reading The Lean Startup I decided to use this as a way of trying to bite off small chucks
+        of a project to get a minimal usable product.  The result of this was a small windows phone 7 application that asks you to tap out the beat of a song that you're listening to and will show you 
+        which dances in its database it would work for.  This is based entirely on tempo and meter and has nothing to do with the style of the song.
+        <a href="http://www.windowsphone.com/en-us/store/app/dancecalc/b414c752-cc97-e011-986b-78e7d1fa76f8">See the app…</a>
     </li>
 
     <li class="three">
-        <h5>Find Web Hosting</h5>
-        You can easily find a web hosting company that offers the right mix of features
-        and price for your applications.
-        <a href="http://go.microsoft.com/fwlink/?LinkId=245157">Learn more…</a>
+        <h5>But not many people own windows phones</h5>
+        Aside from the above being a very small part of the solution, the platform isn't a particularly good test case.  I chose it because I was interested in trying my hand at windows phone programming
+        not because I thought it was the best initial platform.  One of my next steps will be to get the basic functionality for that application working on this web site.  
     </li>
+
+    <li class="four">
+        <h5>But what I really want to do</h5>
+        Is to be able to generate a playlist of songs to dance a slow salsa or fast West Coast Swing or a Viennese Waltz to.  I'd like to do this against my own library or against one of 
+        a multitude of streaming and mp3 purchase services.  The first baby step for that is the songs section of this website, where I've pulled together a bunch of that information 
+        from a number of different sources, merged and edited, so that I've got at least a start of a database of song title/artist/albums associated with various dances.  In the long run I would like this
+        to be both crowd sourced and linked to actual music, but for now enjoy the browsing.
+    </li>
+
 </ol>
