--- a/DanceCalc/music4dance/Views/Song/Edit.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Edit.cshtml
@@ -16,30 +16,6 @@
         @Html.HiddenFor(model => model.SongId)
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.Source)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Source)
-            @Html.ValidationMessageFor(model => model.Source)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Dances)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Dances)
-            @Html.ValidationMessageFor(model => model.Dances)
-        </div>
-
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Tempo)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Tempo)
-            @Html.ValidationMessageFor(model => model.Tempo)
-        </div>
-
-        <div class="editor-label">
             @Html.LabelFor(model => model.Title)
         </div>
         <div class="editor-field">
@@ -62,6 +38,79 @@
             @Html.EditorFor(model => model.Album)
             @Html.ValidationMessageFor(model => model.Album)
         </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Tempo)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Tempo)
+            @Html.ValidationMessageFor(model => model.Tempo)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Track)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Track)
+            @Html.ValidationMessageFor(model => model.Track)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Length)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Length)
+            @Html.ValidationMessageFor(model => model.Length)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Publisher)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Publisher)
+            @Html.ValidationMessageFor(model => model.Publisher)
+        </div>
+
+        <div class="editor-label">
+            @Html.LabelFor(model => model.Genre)
+        </div>
+        <div class="editor-field">
+            @Html.EditorFor(model => model.Genre)
+            @Html.ValidationMessageFor(model => model.Genre)
+        </div>
+
+        <div class="display-label">
+             @Html.DisplayNameFor(model => model.Dances):
+        </div>
+        <div class="display-field">
+            @{ var separator = ""; }
+            @foreach (var item in Model.Dances)
+            {
+                @separator;
+                @Html.DisplayFor(model => item.Info.Name)
+                separator = ", "; 
+            }
+        </div>
+        <br/>
+
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Created):
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Created)
+            @Html.HiddenFor(model => model.Created)
+        </div>
+        <br/>
+
+        <div class="display-label">
+            @Html.DisplayNameFor(model => model.Modified):
+        </div>
+        <div class="display-field">
+            @Html.DisplayFor(model => model.Modified)
+        </div>
+        <br/>
+
+        @Html.HiddenFor(model => model.Purchase)
 
         <p>
             <input type="submit" value="Save" />
