--- a/DanceCalc/music4dance/Views/Song/Index.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Index.cshtml
@@ -42,8 +42,11 @@
 @foreach (var item in Model) {
     <tr>
         <td>
+            @Html.ActionLink(item.Title, "Details", new { id=item.SongId })
+            @*
             @{ string title = Html.DisplayFor(modelItem => item.Title).ToString(); }
             @Html.ActionLink(title, "Details", new { id=item.SongId })
+            *@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Artist)
