Allow dance filtering to take a list of dance Ids and include all of the dances including children that are associated with the IDs

--- a/DanceCalc/music4dance/Views/Home/About.cshtml
+++ b/DanceCalc/music4dance/Views/Home/About.cshtml
@@ -15,6 +15,7 @@
 @foreach (var item in Model)
 {
     <li>@Html.DisplayFor(modelItem => item.DanceName) (@Html.DisplayFor(modelItem => item.SongCount))
+        @Html.ActionLink("Show...", "Index", "Song", new { dances = item.DanceId }, null)
         <ul>
         @foreach (var sitem in item.Children)
         {
