--- a/DanceCalc/music4dance/Content/Site.css
+++ b/DanceCalc/music4dance/Content/Site.css
@@ -316,12 +316,34 @@ table.songlist th
     padding-right: 5px;
 }
 
+table.songlist td
+{
+    padding-left: 3px;
+    padding-right: 3px;
+}
+
 table.songlist 
 {
     border-color: cadetblue;
     border-right-width: medium;
     border-left-width: medium;
-    border-spacing: 3px;
+    border-left-style:solid;
+    border-right-style:solid;
+    border-bottom-width:thick;
+    border-bottom-style:solid;
+}
+
+/* song details page*/
+#songDetails {
+    border-right: solid 2px #c8c8c8;
+    float: left;
+    width: 55%;
+}
+
+#songLog {
+    margin-left: 40px;
+    float: left;
+    width: 40%;
 }
 
 /* content */
@@ -762,6 +784,20 @@ tr.pager td {
         }
 
     #socialLoginForm {
+        margin-left: 0;
+        float: none;
+        width: auto;
+    }
+
+
+    /* song details page */
+    #songDetails {
+        border-right: none;
+        float: none;
+        width: auto;
+    }
+
+    #songLog {
         margin-left: 0;
         float: none;
         width: auto;
