Add in a DanceRating objec that replaces the join between songs and dances and adds a scalar weight

--- a/DanceCalc/music4dance/Views/Song/Index.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Index.cshtml
@@ -64,10 +64,10 @@
         </td>
         <td>
             @{ var separator = ""; }
-            @foreach (var ditem in item.Dances)
+            @foreach (var ditem in item.DanceRatings)
             {
                 @separator;
-                @Html.DisplayFor(m => ditem.Info.Name)
+                @Html.DisplayFor(m => ditem.Dance.Info.Name)
                 separator = ", "; 
             }
         </td>
