--- a/DanceCalc/music4dance/Views/Song/Merge.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Merge.cshtml
@@ -89,7 +89,7 @@
 }
 </table>
 
-@Html.Hidden("SongIds",Model.SongIds);
+@Html.Hidden("SongIds",Model.SongIds)
     
 <input name="Commit" type="submit" value="Okay" />
 <input name="Commit" type="submit" value="Cancel" />
