--- a/DanceCalc/music4dance/Views/SongProperty/Index.cshtml
+++ b/DanceCalc/music4dance/Views/SongProperty/Index.cshtml
@@ -19,7 +19,7 @@
 
 <h2>@ViewBag.Title</h2>
 
-@if (User.IsInRole("showDiagnostics"))
+@if (showDiag)
 {
     <table class="songlist">
         <tr>
