Implement basic logging that should allow for recovery/undo from edit, delete and merge...

--- a/DanceCalc/music4dance/Views/Song/Details.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Details.cshtml
@@ -112,6 +112,8 @@
     {
         @Html.ActionLink("Edit", "Edit", new { id=Model.SongId }) 
         @Html.Display(" | ")
+        @Html.ActionLink("Delete", "Delete", new { id=Model.SongId }) 
+        @Html.Display(" | ")
     }
     @Html.ActionLink("Back to List", (string)ViewBag.BackAction)
 </p>
