--- a/DanceCalc/music4dance/Views/Song/Delete.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Delete.cshtml
@@ -11,48 +11,101 @@
     <legend>Song</legend>
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Source)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Source)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Dances)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Dances)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Tempo)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Tempo)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Title)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.Title)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.Artist)
+        @Html.DisplayNameFor(model => model.Artist):
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Artist)
     </div>
+    <br />
 
     <div class="display-label">
-         @Html.DisplayNameFor(model => model.Album)
+        @Html.DisplayNameFor(model => model.Album):
     </div>
     <div class="display-field">
         @Html.DisplayFor(model => model.Album)
     </div>
+    <br />
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Publisher):
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Publisher)
+    </div>
+    <br />
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Tempo):
+    </div>
+    <div class="display-field">
+        @if (Model.Tempo != null)
+        {
+            string tempo = decimal.Round(Model.Tempo.Value).ToString("F0");
+            @tempo;
+        }
+    </div>
+    <br />
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Genre):
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Genre)
+    </div>
+    <br />
+
+    <div class="display-label">
+        Dance(s):
+    </div>
+    <div class="display-field">
+        @{ var separator = ""; }
+        @if (Model.DanceRatings != null)
+        {
+            foreach (var item in Model.DanceRatings)
+            {
+                @separator;
+            @Html.DisplayFor(model => item.Dance.Info.Name)
+                          separator = ", ";
+            }
+        }
+    </div>
+    <br />
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Track):
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Track)
+    </div>
+    <br />
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Length):
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Length)
+    </div>
+    <br />
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Created):
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Created)
+    </div>
+    <br />
+
+    <div class="display-label">
+        @Html.DisplayNameFor(model => model.Modified):
+    </div>
+    <div class="display-field">
+        @Html.DisplayFor(model => model.Modified)
+    </div>
+    <br />
 </fieldset>
-@using (Html.BeginForm()) {
+
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     <p>
         <input type="submit" value="Delete" /> |
