--- a/DanceCalc/music4dance/Views/Song/Details.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Details.cshtml
@@ -68,7 +68,7 @@
             foreach (var item in Model.DanceRatings)
             {
                 @separator;
-                @Html.DisplayFor(model => item.Dance.Info.Name)
+                @Html.DisplayFor(model => item.Dance.Info.Name);
                 separator = ", "; 
             }
         }
