--- a/DanceCalc/music4dance/Views/Song/SongItems.cshtml
+++ b/DanceCalc/music4dance/Views/Song/SongItems.cshtml
@@ -17,4 +17,15 @@
             </tr>
         }
     </table>
+    
+    <p>
+        <b>Users: </b>
+        @{string separator = "";}
+        @foreach (var user in Model.ModifiedBy)
+        {
+            @separator;
+            @user.UserName;
+            separator = ", ";                         
+        }
+    </p>
 }
