--- a/DanceCalc/music4dance/Views/Song/Index.cshtml
+++ b/DanceCalc/music4dance/Views/Song/Index.cshtml
@@ -77,7 +77,18 @@
             @Html.DisplayFor(modelItem => item.Artist)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Album)
+            @if (!string.IsNullOrWhiteSpace(item.Album))
+            {
+                string[] albums = item.Album.Split(new char[] { '|' });
+                if (albums.Length > 0)
+                {
+                    <text>@albums[0]</text>
+                }
+                else
+                {
+                    <text></text>
+                }
+            }
         </td>
         <td>
             @if (item.Tempo != null)
